--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -30,7 +30,7 @@ html, body
 
 body
 	font-size: 16px
-	min-width: 320px
+	min-width: 480px
 	position: relative
 	line-height: 1.75
 	font-family: $default-font
@@ -76,7 +76,7 @@ section
 	padding: 110px 0
 	.scroll
 		position: absolute
-		bottom: 5%
+		bottom: 3%
 		width: 100%
 		text-align: center
 		font-size: 18px
@@ -94,7 +94,14 @@ section
 			line-height: 40px
 			transition: color .2s ease
 			&:hover
-				color: $gray
+				color: $dark
+			&.inverse
+				&:hover
+					color: $accent
+
+.title
+	font-size: 60px
+	// padding-top: 90px
 
 .s
 	&-home
@@ -111,17 +118,35 @@ section
 					max-width: 100%
 					min-height: 200px
 				.home-title
-					font-size: 60px
 					margin-top: 10px
 					span
-						font-weight: normal
+						font-weight: bold
+	&-about
+		color: $dark
+		.about
+			width: 84%
+			height: 100%
+			margin: 0 8%
+			display: flex
+			flex-direction: row
+    		flex-wrap: wrap
+    		justify-content: space-between
+			align-items: center
+			&-image
+				// width: 50%
+			
+			&-text
+				// width: 50%
+				margin-left: 20px
+				
+
+				
 
 
 
-
-// .img-responsive
-// 	display: block
-// 	
-// 	height: auto
+.img-responsive
+	display: block
+	max-width: 100%
+	height: auto
 
 @import "media" // Всегда в конце
