--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -16,6 +16,8 @@
 	section
 		.scroll
 			font-size: 14px
+			a
+				font-size: 32px
 
 
 /* Small Devices, Tablets */
@@ -24,7 +26,7 @@
 	.top-nav
 		font-size: 20px
 		a
-			margin: auto 9px
+			margin: auto 8px
 
 	.title
 		font-size: 38px
@@ -35,6 +37,10 @@
 				&-image
 					width: 90%
 					margin: 20px auto
+		&-portfolio
+			.portfolio
+				&-title
+					margin: 30px 0
 		&-contact
 			.contact
 				&-data
