--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -80,38 +80,50 @@ body
 	top: 0
 	left: 0
 	width: 94%
-	height: 10vh
-	min-height: 50px
+	height: 100px
 	font-size: 24px
 	text-align: center
 	border-bottom: 1px solid $accent
 	z-index: 10
+	
+	&::before
+		content: ''
+		position: fixed
+		left: 0
+		right: 0
+		height: 100px
+		background-color: rgba(#000,.1)
+		filter: blur(3px)
+		z-index: -1
 	a
 		display: inline-block
 		margin: auto 15px
 		text-decoration: none
-		color: $accent
+		color: #fff
 		transition: color .2s ease
 		&:hover
 			color: $hover
 
 section
 	position: relative
-	height: 100vh
+	height: auto
 	min-height: 700px
 	background-size: cover
 	background-position: center
 	padding:
-		top: 11vh
-		bottom: 120px
+		top: 110px
+
 	.scroll
-		position: absolute
-		bottom: 25px
 		width: 100%
 		text-align: center
 		font-size: 18px
 		font-weight: bold
 		letter-spacing: 2px
+		padding-bottom: 25px
+		&::before
+			content: ''
+			clear: both
+			display: block
 		a
 			text-decoration: none
 			color: $accent
@@ -132,10 +144,11 @@ section
 
 .title
 	font-size: 60px
-	// padding-top: 90px
 
 .s
 	&-home
+		height: 100vh
+		padding-bottom: 110px
 		.home
 			display: flex
 			height: 100%
@@ -152,13 +165,16 @@ section
 					margin-top: 10px
 					span
 						font-weight: bold
+		.scroll
+			position: absolute
+			bottom: 25px
+			padding-bottom: 0
+			
 	&-about
 		color: $dark
-		display: flex
 		.about
+			margin: 0 5%
 			width: 90%
-			// height: 100%
-			margin: auto 5%
 			&-image
 				width: 50%
 				height: auto
@@ -169,7 +185,6 @@ section
 				margin-bottom: 20px
 			&-text
 				font-family: opensans, sans-serif
-				// overflow: hidden
 				p
 					font-size: 20px
 				&-name
@@ -186,13 +201,11 @@ section
 				margin: 50px 0
 			&-photos
 				width: 90%
-				// max-width: 1700px
 				margin: 0 auto
 				text-align: center
 				display: flex
 				flex-flow: row wrap
 				justify-content: space-around
-				// align-content: space-between
 				img
 					width: 279px
     				height: 250px
@@ -202,6 +215,8 @@ section
 						transform: scale(1.1)
 	&-contact
 		color: $dark
+		padding-bottom: 110px
+		height: 100vh
 		.contact
 			display: flex
 			width: 100%
@@ -223,24 +238,23 @@ section
 						width: 50px
 						height: 50px
 						border: 1px solid $dark
-						border-radius: 25px
+						border-radius: 50%
 						line-height: 50px
 						font-size: 30px
 						margin: 0 5px
 						&:hover
 							background-color: $accent
-		.footer
+		.contact-footer
 			display: flex
 			justify-content: center
 			position: absolute
 			bottom: 0
 			width: 94%
-			height: 10vh
-			min-height: 50px
+			height: 100px
 			font-size: 18px
 			color: $accent
 			border-top: 1px solid $accent
 			span
 				margin: auto
 
-@import "media" // Всегда в конце
+@import "media"
