add hamburger, mobile view, scroll

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -2,5 +2,6 @@ $default-font: "nexa", sans-serif
 $accent: #f1f1f1
 $gray: #bebebe
 $dark: #202020
+$light-dark: #606060
 $light-gray: #cecece
 $hover: #909090
