--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -13,42 +13,72 @@
 		&-about
 			height: auto
 		// height: 100%
-	section
-		.scroll
-			font-size: 14px
-			a
-				font-size: 32px
+	
+	.scroll
+		font-size: 14px
+		a
+			font-size: 32px
 
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 
-	.top-nav
-		font-size: 20px
-		a
-			margin: auto 8px
+	.navbar-nav
+		width: auto
+		> li
+			display: block
+			padding: 5px 0
 
+	.navbar-custom
+		background-color: rgba(#000,.8)
+
+	section
+		padding-top: 70px
 	.title
-		font-size: 38px
-
+		font-size: 36px
+	
+	
+	.scroll-big
+		display: none
+	
+	.scroll-small
+		display: block
+		
 	.s
+		&-home
+			.home
+				&-content
+					img
+						width: 300px
+						height: 300px
 		&-about
 			.about
 				&-image
-					width: 90%
-					margin: 20px auto
+					width: 100%
+					// margin: 20px auto
 		&-portfolio
 			.portfolio
 				&-title
-					margin: 30px 0
+					margin: 10px 0
 		&-contact
-			.contact
-				&-data
-					&-tel
-						font-size: 38px
+			.contact-data-cont
+				font-size: 38px
 
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
-	/**/
+	.title
+		font-size: 30px
+	.s
+		&-home
+			.home-title
+				line-height: 30px
+				span
+					display: block
+					
+		&-contact
+			.contact-data-cont
+				font-size: 30px
+			.contact-data-descr
+				font-size: 24px
 
